[gd_scene load_steps=18 format=3 uid="uid://csuqd7yr3wp8r"]

[ext_resource type="Theme" uid="uid://c6q5tn6lrdfpy" path="res://assets/ui/theme.tres" id="1_cisqr"]
[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_unqdc"]
[ext_resource type="PackedScene" uid="uid://d3lstvim7ia7x" path="res://scenes/backgrounds/background_1.tscn" id="2_1h2no"]
[ext_resource type="Texture2D" uid="uid://bw6iaxhfblh3" path="res://assets/player/ship.png" id="3_jejjc"]
[ext_resource type="PackedScene" uid="uid://bauw3vtckwroo" path="res://scenes/menus/level_select.tscn" id="4_fmaha"]

[sub_resource type="AtlasTexture" id="AtlasTexture_88bbd"]
atlas = ExtResource("3_jejjc")
region = Rect2(0, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kau11"]
atlas = ExtResource("3_jejjc")
region = Rect2(24, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_70g7n"]
atlas = ExtResource("3_jejjc")
region = Rect2(0, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2y4q"]
atlas = ExtResource("3_jejjc")
region = Rect2(24, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx7tg"]
atlas = ExtResource("3_jejjc")
region = Rect2(0, 32, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tejqq"]
atlas = ExtResource("3_jejjc")
region = Rect2(24, 32, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_koa37"]
atlas = ExtResource("3_jejjc")
region = Rect2(0, 48, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys5oj"]
atlas = ExtResource("3_jejjc")
region = Rect2(24, 48, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_55ctq"]
atlas = ExtResource("3_jejjc")
region = Rect2(0, 64, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtnyb"]
atlas = ExtResource("3_jejjc")
region = Rect2(24, 64, 24, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hg2x5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88bbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kau11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88bbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kau11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70g7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2y4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70g7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2y4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx7tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tejqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx7tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tejqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koa37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys5oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koa37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys5oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55ctq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtnyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55ctq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtnyb")
}],
"loop": true,
"name": &"main_menu_ship",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_wo7y1"]
font_size = 32

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
theme = ExtResource("1_cisqr")
script = ExtResource("1_unqdc")

[node name="Background1" parent="." instance=ExtResource("2_1h2no")]

[node name="Spaceship" type="AnimatedSprite2D" parent="."]
position = Vector2(640, 254)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_hg2x5")
animation = &"main_menu_ship"
autoplay = "main_menu_ship"

[node name="MainMenuButtons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -133.0
offset_right = 78.5
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuButtons"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="MainMenuButtons/VBoxContainer"]
layout_mode = 2
text = "Stranded"
label_settings = SubResource("LabelSettings_wo7y1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="MainMenuButtons/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="QuitButton" type="Button" parent="MainMenuButtons/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="LevelSelect" parent="." instance=ExtResource("4_fmaha")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MainMenuButtons/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="back" from="LevelSelect" to="." method="_on_level_select_back"]
